tests/snapshots/integration__integration_tests__config_list__config_list_outside_repo.snap
---
source: tests/integration_tests/config_list.rs
info:
  program: wt
  args:
    - config
    - list
  env:
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpqVUgYd
---
success: true
exit_code: 0
----- stdout -----
Global Config: [TEMP_HOME]/.config/worktrunk/config.toml
  worktree-path = "../{repo}.{branch}"

Project Config: Not in a git repository

----- stderr -----
